[gd_scene load_steps=6 format=3 uid="uid://ccom8jmnsbdwc"]

[ext_resource type="Script" uid="uid://g6pnxgt6atry" path="res://Platooning/StrategicDeciders/scout_strategy.gd" id="1_6hbv3"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="2_s0aaa"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="3_oaadw"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="4_32tjx"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="5_dgok2"]

[node name="ScoutStrategy" type="Node2D"]
script = ExtResource("1_6hbv3")

[node name="Behavior" type="Node" parent="."]
script = ExtResource("2_s0aaa")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="ScoutStrategy" type="Node" parent="Behavior"]
script = ExtResource("3_oaadw")
initial_state = NodePath("NormalOperation")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="NormalOperation" type="Node" parent="Behavior/ScoutStrategy"]
script = ExtResource("3_oaadw")
initial_state = NodePath("Exploring")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Exploring" type="Node" parent="Behavior/ScoutStrategy/NormalOperation"]
script = ExtResource("4_32tjx")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="attack" type="Node" parent="Behavior/ScoutStrategy/NormalOperation/Exploring"]
script = ExtResource("5_dgok2")
to = NodePath("../../Attacking")
event = &"attack"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="Behavior/ScoutStrategy/NormalOperation"]
script = ExtResource("4_32tjx")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="enemy_lost" type="Node" parent="Behavior/ScoutStrategy/NormalOperation/Attacking"]
script = ExtResource("5_dgok2")
to = NodePath("../../Waiting")
event = &"enemy_lost"
delay_in_seconds = "0.0"

[node name="Waiting" type="Node" parent="Behavior/ScoutStrategy/NormalOperation"]
script = ExtResource("4_32tjx")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="enemy_found" type="Node" parent="Behavior/ScoutStrategy/NormalOperation/Waiting"]
script = ExtResource("5_dgok2")
to = NodePath("../../Attacking")
event = &"attack"
delay_in_seconds = "0.0"

[node name="stop" type="Node" parent="Behavior/ScoutStrategy/NormalOperation/Waiting"]
script = ExtResource("5_dgok2")
to = NodePath("../../Exploring")
delay_in_seconds = "5.0"

[node name="flee" type="Node" parent="Behavior/ScoutStrategy/NormalOperation"]
script = ExtResource("5_dgok2")
to = NodePath("../../Fleeing")
event = &"flee"
delay_in_seconds = "0.0"

[node name="Fleeing" type="Node" parent="Behavior/ScoutStrategy"]
script = ExtResource("4_32tjx")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="escaped" type="Node" parent="Behavior/ScoutStrategy/Fleeing"]
script = ExtResource("5_dgok2")
to = NodePath("../../NormalOperation")
delay_in_seconds = "10.0"

[connection signal="state_processing" from="Behavior/ScoutStrategy/NormalOperation" to="." method="_on_normal_operation_state_processing"]
[connection signal="state_entered" from="Behavior/ScoutStrategy/NormalOperation/Exploring" to="." method="_on_exploring_state_entered"]
[connection signal="taken" from="Behavior/ScoutStrategy/NormalOperation/Exploring/attack" to="." method="_on_regroup_taken"]
[connection signal="state_entered" from="Behavior/ScoutStrategy/NormalOperation/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_entered" from="Behavior/ScoutStrategy/Fleeing" to="." method="_on_fleeing_state_entered"]
